feat: Enhance Gemini API integration and command parsing
- Implemented automatic correction for Gemini model names (e.g., "gemini" to "gemini-pro").
- Improved command execution capabilities with robust parsing for quoted arguments and escape characters.
- Added `parseCommand` method to handle complex command strings.
- Introduced `executeCommandString` for simplified command execution.
- Updated unit tests for command parsing and AIHandler functionality.
- Enhanced error handling and response parsing for Gemini API.
- Created CHANGELOG.md and GEMINI_FIX.md for documentation of changes.